# gh_framwork

./: .gitattributes  README.md  steps.txt
framework/databricks-medallion-framework/: .gitignore  README.md  pyproject.toml
framework/databricks-medallion-framework/.github/workflows/: deploy.yml
framework/databricks-medallion-framework/bundles/: databricks.yml
framework/databricks-medallion-framework/config/: environments.yaml
framework/databricks-medallion-framework/config/entities/: hr.yaml  (+3 more)
framework/databricks-medallion-framework/design/: README.md  implementation-plan.md  uc-volume-landing.md
framework/databricks-medallion-framework/docs/: 01-how-the-framework-works.md  02-ingestion-patterns-connect-vs-volumes.md  03-declarative-pipelines-bronze-silver-gold.md  04-how-to-add-a-source.md  05-how-to-add-an-entity.md  06-control-catalog-and-metadata.md  07-workspace-proof-runbook.md  08-reprocess-and-pipeline-assets.md  08-workspace-proof-runbook.md  09-databricks-asset-bundles.md  09-reprocess-and-pipeline-assets.md  README.md
framework/databricks-medallion-framework/samples/: README.md
framework/databricks-medallion-framework/scripts/: README.md  _db_session.py  lint_framework_config.py  run_control_sql.py  show_tables.py  workspace_proof_preflight.py
framework/databricks-medallion-framework/sql/: README.md
framework/databricks-medallion-framework/tests/: conftest.py  test_apply_control_config.py  test_expectations.py  test_metadata.py  test_pipeline_registration.py  test_reprocess_dispatcher.py  test_security.py  test_sql_safe.py  test_volumes.py
(+107 files in other folders)
